--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,11 +11,11 @@
 }
 
 .gray-footer {
-    color: #1f1f1f;
+    background-color: #1f1f1f;
 }
 
 .gray-footer-btn {
-    color: #444;
+    background-color: #444;
 }
 
 .primary-purp {
